# MiniRedis

./: .dockerignore  .gitignore  Dockerfile.base  README.md  docker-compose.yml
Backend/: CmakeLists.txt  Dockerfile  main.cc
Backend/controller/: ApiController.cc  ApiController.h
Backend/db/: db.sql
Backend/db/migrations/: 001_add_firebase_uid.sql  002_create_rate_limits.sql
api-gateway/: dockerfile  go.sum  main.go  monitoring.go
config/: config.cpp  config.h
monitoring-service/: Dockerfile  main.py  r.txt  test_services.py
node/: CMakeLists.txt  Dockerfile  NodeManager.cpp  NodeManager.h  main.cpp
redis-cloud-studio/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
redis-cloud-studio/auth/: Dockerfile  go.mod  go.sum  main.go
redis-cloud-studio/auth/config/: config.go
redis-cloud-studio/auth/handler/: login.go  refresh.go
redis-cloud-studio/auth/middleware/: middleware.go
redis-cloud-studio/auth/migrations/: 002_refresh_tokens.sql  miniredis_schema.sql
redis-cloud-studio/auth/models/: token.go
redis-cloud-studio/auth/router/: router.go
redis-cloud-studio/auth/utils/: token.go
redis-cloud-studio/src/: App.tsx  index.css
redis-cloud-studio/src/components/: ApiKeyCard.tsx  CommandHistory.tsx  FeatureCard.tsx  MetricCard.tsx  Navbar.tsx  PricingCard.tsx  Terminal.tsx  ThemeProvider.tsx  ThemeToggle.tsx
redis-cloud-studio/src/components/ui/: button.tsx
redis-cloud-studio/src/hooks/: useLenis.ts
redis-cloud-studio/src/lib/: api.ts  firebase.ts  mockData.ts  theme.ts
redis-cloud-studio/src/pages/: Dashboard.tsx  Index.tsx  Login.tsx  Monitoring.tsx  RedisCLI.tsx  Register.tsx  Settings.tsx
router/: CMakeLists.txt  Dockerfile  Router.cpp  Router.h  main.cpp
src/: MiniRouter.cpp  TenantManager.h  main.cpp
